<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notif_channel_name">udacity</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">Check status of Project 3 repository download</string>
    <string name="notification_button">See changes</string>

    <string name="download_success">Success</string>
    <string name="download_failed">Failed</string>

    <string name="button_name">Download</string>
    <string name="button_loading">loading... </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="radioOption1">Glide - Image Loading Library by BumpTech</string>
    <string name="radioOption2">LoadApp - Current repository by Udacity</string>
    <string name="radioOption3">Retrofit - Type-safe HTTP client for Android and Java by Square Inc</string>
    <string name="no_radio">Please select an option to download</string>
    <string name="filename_label">Filename:  </string>
    <string name="status_label">Status:</string>
    <string name="status_text">STATUS TEXT HERE</string>
    <string name="filename_text">FILENAME TEXT HERE</string>


</resources>
