<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.motion.widget.MotionLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail"
    app:layoutDescription="@xml/content_detail_scene">

    <TextView
        android:id="@+id/file_name_view"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename_label"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/filename_text"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/file_name_view"
        android:text="@{}"
        android:textSize="@dimen/default_text_size" />

    <TextView
        android:id="@+id/status_view"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_label"
        android:textStyle="bold"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filename_text"/>

    <TextView
        android:id="@+id/status_text"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filename_text"
        android:text="@string/status_text"
        android:textSize="@dimen/default_text_size"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="@dimen/fab_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:srcCompat="@drawable/arrow_back_fill0_wght400_grad0_opsz48"/>

</androidx.constraintlayout.motion.widget.MotionLayout>